--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Busqueda</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_busqueda">Busqueda</string>
     <string name="menu_gallery">Perfil</string>
     <string name="menu_slideshow">Estado de cuenta</string>
     <string name="menu_pedidos">Pedidos</string>
